infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aurapath-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - aurapath.com
        - api.aurapath.com
      secretName: aurapath-tls-cert
  rules:
    - host: aurapath.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aurapath-frontend-svc
                port:
                  number: 80
    - host: api.aurapath.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aurapath-backend-svc
                port:
                  number: 4000
